fix(chat): Implement and use Autoscrolling custom attribute instead of relying on flex-direction (which doesn't show a scrollbar in many browsers)

--- a/src/frontend/styles/chat.less
+++ b/src/frontend/styles/chat.less
@@ -17,8 +17,6 @@
     padding: 0px;
     overflow-y: scroll;
     overflow-x: hidden;
-    display: flex;
-    flex-direction: column-reverse;
   }
 
   .chatcontrols {
